--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dev-dependencies]
+reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
+
 [dependencies]
 axum = "0.7.4"
 tokio = { version = "1.36", features = ["full"] }
