--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -10,5 +10,8 @@ reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
 
 [dependencies]
 axum = "0.7.4"
+serde = {version = "1.0.228", features = ["derive"]}
+serde_json = "1.0.145"
 tokio = { version = "1.36", features = ["full"] }
-tower-http = { version = "0.5.0", features = ["fs"] }
+tower-http = { version = "0.5.2", features = ["fs"] }
+uuid = {version = "1.18.1", features = ["v4", "serde"]}
